list view swipe added

--- a/app/src/main/res/layout/row_data_view.xml
+++ b/app/src/main/res/layout/row_data_view.xml
@@ -6,81 +6,98 @@
             type="com.davutozcan.bookmarkreader.weblist.WebListRowModel">
         </variable>
     </data>
-    <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <ru.rambler.libs.swipe_layout.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/row_view_swipe_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/container"
-        android:background="@color/colorPrimaryLight"
-        android:onClick="@{()->model.onItemSelected()}"
-        android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="5dp"
         >
+        <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/container"
+            android:background="@color/colorPrimaryLight"
+            android:onClick="@{()->model.onItemSelected()}"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp"
+            >
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:imageUrl="@{model.faviconUrl}"
-            app:civ_border_width="1dp"
-            app:civ_border_color="@color/colorImageBorder"
-            tools:src="@drawable/circular_user"
-            />
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toRightOf="@id/thumbnail"
-            app:layout_constraintTop_toTopOf="@id/thumbnail"
-            app:layout_constraintRight_toRightOf="parent"
-            android:text="@{model.title}"
-            android:textColor="@color/colorListTitle"
-            android:textSize="17sp"
-            android:layout_marginStart="10dp"
-            tools:text="Facebook"
-            android:ellipsize="end"
-            android:maxLines="1"
-            />
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/weblist_text_color"
-            android:minHeight="50dp"
-            android:text="@{model.description == null ?  @string/not_evaluated:model.description}"
-            app:layout_constraintLeft_toLeftOf="@id/title"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintRight_toRightOf="@id/title"
-            android:maxLines="10"
-            android:ellipsize="end"
-            tools:text="@string/already_added"
-            />
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_color_disabled"
-            android:text="@{model.changeDate}"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="@id/thumbnail"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="9sp"
-            tools:text="01/01/1970"
-            />
-        <View
-            android:id="@+id/delimeter"
-            android:layout_marginTop="2dp"
-            android:layout_width="0dp"
-            android:layout_height="1px"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/list_delimeter"
-            />
-    </android.support.constraint.ConstraintLayout>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:imageUrl="@{model.faviconUrl}"
+                app:civ_border_width="1dp"
+                app:civ_border_color="@color/colorImageBorder"
+                tools:src="@drawable/circular_user"
+                />
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toRightOf="@id/thumbnail"
+                app:layout_constraintTop_toTopOf="@id/thumbnail"
+                app:layout_constraintRight_toRightOf="parent"
+                android:text="@{model.title}"
+                android:textColor="@color/colorListTitle"
+                android:textSize="17sp"
+                android:layout_marginStart="10dp"
+                tools:text="Facebook"
+                android:ellipsize="end"
+                android:maxLines="1"
+                />
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/weblist_text_color"
+                android:minHeight="50dp"
+                android:text="@{model.description == null ?  @string/not_evaluated:model.description}"
+                app:layout_constraintLeft_toLeftOf="@id/title"
+                app:layout_constraintTop_toBottomOf="@id/title"
+                app:layout_constraintRight_toRightOf="@id/title"
+                android:maxLines="10"
+                android:ellipsize="end"
+                tools:text="@string/already_added"
+                />
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_color_disabled"
+                android:text="@{model.changeDate}"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="@id/thumbnail"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="9sp"
+                tools:text="01/01/1970"
+                />
+            <View
+                android:id="@+id/delimeter"
+                android:layout_marginTop="2dp"
+                android:layout_width="0dp"
+                android:layout_height="1px"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@color/list_delimeter"
+                />
+        </android.support.constraint.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:background="@color/colorAccent"
+            app:bring_to_clamp="150dp"
+            app:clamp="self"
+            app:gravity="left"
+            app:sticky="none"
+            app:sticky_sensitivity="0.5"
+            >
+        </LinearLayout>
+    </ru.rambler.libs.swipe_layout.SwipeLayout>
 </layout>
