--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -24,7 +24,7 @@
                android:layout_marginTop="@dimen/settings_horizontal_margin"
                android:layout_marginLeft="@dimen/settings_horizontal_margin"
                android:layout_centerInParent="true"
-               android:src="@drawable/circular_user"
+               app:imageUrl="@{model.imageUrl}"
                app:civ_border_color="@color/colorImageBorder"
                />
             <TextView
