--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,7 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:paddingRight">8dp</item>
     </style>
+    <style name="alert_dialog" parent="AppTheme">
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
